After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739404 - mpegts: value stored is never used
mpegts: value stored is never used
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal minor
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-30 14:29 UTC by Luis de Bethencourt
Modified: 2014-10-30 23:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.24 KB, patch)
2014-10-30 14:29 UTC, Luis de Bethencourt
committed Details | Review

Description Luis de Bethencourt 2014-10-30 14:29:47 UTC
Created attachment 289667 [details] [review]
patch

Both _parse_atsc_mgt() and  _parse_atsc_vct () change the value of the variable data just before returning. New value is never used since data is a pointer declared at the beginning of the function and going out of scope just after the new value is stored.

> data += descriptors_loop_length;

Removing this.
Comment 1 Luis de Bethencourt 2014-10-30 23:21:12 UTC
Thanks Tim!

Merged.
Comment 2 Luis de Bethencourt 2014-10-30 23:22:04 UTC
Comment on attachment 289667 [details] [review]
patch

commit f76d1a25140c0d475e300ae2ba93c8d3e55e2272